deploy/web-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  labels:
    app: web-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      containers:
        - name: web-ui
          image: web-ui
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: web-ui
spec:
  selector:
    app: web-ui
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
