deploy/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  #tls:
  #  - hosts:
  #    - stand-up.botenza.com
  #    secretName: app-secret-tls
  rules:
    - host: stand-up.botenza.com
      http:
        paths:
          #- path: /api/slack
          #  backend:
          #    serviceName: api-service
          #    servicePort: 3000
          - path: /
            backend:
              serviceName: ui-service
              servicePort: 3000
#---
#apiVersion: v1
#kind: Secret
#metadata:
#  name: app-secret-tls
#type: Opaque
#data:
#  tls.crt: c3RhbmR1cF8xMjM=
#  tls.key: c3RhbmR1cF8xMjM=
